lab2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> instructions_opt
Rule 2     instructions_opt -> instructions
Rule 3     instructions_opt -> <empty>
Rule 4     instructions -> instructions instruction
Rule 5     instructions -> instruction
Rule 6     instruction -> { instruction }
Rule 7     instruction -> if
Rule 8     instruction -> return ;
Rule 9     instruction -> BREAK ;
Rule 10    instruction -> CONTINUE ;
Rule 11    instruction -> for_loop
Rule 12    instruction -> while_loop
Rule 13    instruction -> assignment ;
Rule 14    instruction -> print
Rule 15    if -> IF ( expression ) instruction ELSE instruction
Rule 16    if -> IF ( expression ) instruction
Rule 17    if -> IF ( expression ) instruction ELSE if
Rule 18    while_loop -> WHILE ( expression ) instruction
Rule 19    while_loop -> WHILE ( expression ) { instruction }
Rule 20    while_loop -> WHILE ( expression ) { instructions }
Rule 21    for_loop -> FOR ID = expression : expression instruction
Rule 22    return -> RETURN expression
Rule 23    return -> RETURN
Rule 24    print -> PRINT ( list_for_print ) ;
Rule 25    print -> PRINT list_for_print ;
Rule 26    list_for_print -> expression , list_for_print
Rule 27    list_for_print -> expression
Rule 28    expression -> var
Rule 29    expression -> ( expression )
Rule 30    expression -> INTNUM
Rule 31    expression -> FLOATNUM
Rule 32    expression -> STRING
Rule 33    var -> ID
Rule 34    var -> ID [ expression , expression ]
Rule 35    assignment -> var = expression
Rule 36    assignment -> var ADDASSIGN expression
Rule 37    assignment -> var SUBASSIGN expression
Rule 38    assignment -> var MULASSIGN expression
Rule 39    assignment -> var DIVASSIGN expression
Rule 40    expression -> expression '
Rule 41    expression -> - expression
Rule 42    expression -> expression + expression
Rule 43    expression -> expression - expression
Rule 44    expression -> expression * expression
Rule 45    expression -> expression / expression
Rule 46    expression -> expression DOTADD expression
Rule 47    expression -> expression DOTSUB expression
Rule 48    expression -> expression DOTMUL expression
Rule 49    expression -> expression DOTDIV expression
Rule 50    expression -> expression < expression
Rule 51    expression -> expression > expression
Rule 52    expression -> expression LESSEQ expression
Rule 53    expression -> expression MOREEQ expression
Rule 54    expression -> expression EQUAL expression
Rule 55    expression -> expression NOTEQUAL expression
Rule 56    expression -> matrix
Rule 57    matrix -> [ matrix ]
Rule 58    matrix -> [ sub_string_1 ]
Rule 59    matrix -> [ sub_string_1 , matrix ]
Rule 60    sub_string_1 -> sub_string_1 , expression
Rule 61    sub_string_1 -> expression
Rule 62    expression -> matrix_creation ( expression )
Rule 63    matrix_creation -> ZEROS
Rule 64    matrix_creation -> ONES
Rule 65    matrix_creation -> EYE

Terminals, with rules where they appear

'                    : 40
(                    : 15 16 17 18 19 20 24 29 62
)                    : 15 16 17 18 19 20 24 29 62
*                    : 44
+                    : 42
,                    : 26 34 59 60
-                    : 41 43
/                    : 45
:                    : 21
;                    : 8 9 10 13 24 25
<                    : 50
=                    : 21 35
>                    : 51
ADDASSIGN            : 36
BREAK                : 9
CONTINUE             : 10
DIVASSIGN            : 39
DOTADD               : 46
DOTDIV               : 49
DOTMUL               : 48
DOTSUB               : 47
ELSE                 : 15 17
EQUAL                : 54
EYE                  : 65
FLOATNUM             : 31
FOR                  : 21
ID                   : 21 33 34
IF                   : 15 16 17
INTNUM               : 30
LESSEQ               : 52
MOREEQ               : 53
MULASSIGN            : 38
NOTEQUAL             : 55
ONES                 : 64
PRINT                : 24 25
RETURN               : 22 23
STRING               : 32
SUBASSIGN            : 37
WHILE                : 18 19 20
ZEROS                : 63
[                    : 34 57 58 59
]                    : 34 57 58 59
error                : 
{                    : 6 19 20
}                    : 6 19 20

Nonterminals, with rules where they appear

assignment           : 13
expression           : 15 16 17 18 19 20 21 21 22 26 27 29 34 34 35 36 37 38 39 40 41 42 42 43 43 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 60 61 62
for_loop             : 11
if                   : 7 17
instruction          : 4 5 6 15 15 16 17 18 19 21
instructions         : 2 4 20
instructions_opt     : 1
list_for_print       : 24 25 26
matrix               : 56 57 59
matrix_creation      : 62
print                : 14
program              : 0
return               : 8
sub_string_1         : 58 59 60
var                  : 28 35 36 37 38 39
while_loop           : 12

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . instructions_opt
    (2) instructions_opt -> . instructions
    (3) instructions_opt -> .
    (4) instructions -> . instructions instruction
    (5) instructions -> . instruction
    (6) instruction -> . { instruction }
    (7) instruction -> . if
    (8) instruction -> . return ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . for_loop
    (12) instruction -> . while_loop
    (13) instruction -> . assignment ;
    (14) instruction -> . print
    (15) if -> . IF ( expression ) instruction ELSE instruction
    (16) if -> . IF ( expression ) instruction
    (17) if -> . IF ( expression ) instruction ELSE if
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (21) for_loop -> . FOR ID = expression : expression instruction
    (18) while_loop -> . WHILE ( expression ) instruction
    (19) while_loop -> . WHILE ( expression ) { instruction }
    (20) while_loop -> . WHILE ( expression ) { instructions }
    (35) assignment -> . var = expression
    (36) assignment -> . var ADDASSIGN expression
    (37) assignment -> . var SUBASSIGN expression
    (38) assignment -> . var MULASSIGN expression
    (39) assignment -> . var DIVASSIGN expression
    (24) print -> . PRINT ( list_for_print ) ;
    (25) print -> . PRINT list_for_print ;
    (33) var -> . ID
    (34) var -> . ID [ expression , expression ]

    $end            reduce using rule 3 (instructions_opt -> .)
    {               shift and go to state 5
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    PRINT           shift and go to state 20
    ID              shift and go to state 17

    program                        shift and go to state 1
    instructions_opt               shift and go to state 2
    instructions                   shift and go to state 3
    instruction                    shift and go to state 4
    if                             shift and go to state 6
    return                         shift and go to state 7
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    var                            shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> instructions_opt .

    $end            reduce using rule 1 (program -> instructions_opt .)


state 3

    (2) instructions_opt -> instructions .
    (4) instructions -> instructions . instruction
    (6) instruction -> . { instruction }
    (7) instruction -> . if
    (8) instruction -> . return ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . for_loop
    (12) instruction -> . while_loop
    (13) instruction -> . assignment ;
    (14) instruction -> . print
    (15) if -> . IF ( expression ) instruction ELSE instruction
    (16) if -> . IF ( expression ) instruction
    (17) if -> . IF ( expression ) instruction ELSE if
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (21) for_loop -> . FOR ID = expression : expression instruction
    (18) while_loop -> . WHILE ( expression ) instruction
    (19) while_loop -> . WHILE ( expression ) { instruction }
    (20) while_loop -> . WHILE ( expression ) { instructions }
    (35) assignment -> . var = expression
    (36) assignment -> . var ADDASSIGN expression
    (37) assignment -> . var SUBASSIGN expression
    (38) assignment -> . var MULASSIGN expression
    (39) assignment -> . var DIVASSIGN expression
    (24) print -> . PRINT ( list_for_print ) ;
    (25) print -> . PRINT list_for_print ;
    (33) var -> . ID
    (34) var -> . ID [ expression , expression ]

    $end            reduce using rule 2 (instructions_opt -> instructions .)
    {               shift and go to state 5
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    PRINT           shift and go to state 20
    ID              shift and go to state 17

    instruction                    shift and go to state 21
    if                             shift and go to state 6
    return                         shift and go to state 7
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    var                            shift and go to state 19

state 4

    (5) instructions -> instruction .

    {               reduce using rule 5 (instructions -> instruction .)
    BREAK           reduce using rule 5 (instructions -> instruction .)
    CONTINUE        reduce using rule 5 (instructions -> instruction .)
    IF              reduce using rule 5 (instructions -> instruction .)
    RETURN          reduce using rule 5 (instructions -> instruction .)
    FOR             reduce using rule 5 (instructions -> instruction .)
    WHILE           reduce using rule 5 (instructions -> instruction .)
    PRINT           reduce using rule 5 (instructions -> instruction .)
    ID              reduce using rule 5 (instructions -> instruction .)
    $end            reduce using rule 5 (instructions -> instruction .)


state 5

    (6) instruction -> { . instruction }
    (6) instruction -> . { instruction }
    (7) instruction -> . if
    (8) instruction -> . return ;
    (9) instruction -> . BREAK ;
    (10) instruction -> . CONTINUE ;
    (11) instruction -> . for_loop
    (12) instruction -> . while_loop
    (13) instruction -> . assignment ;
    (14) instruction -> . print
    (15) if -> . IF ( expression ) instruction ELSE instruction
    (16) if -> . IF ( expression ) instruction
    (17) if -> . IF ( expression ) instruction ELSE if
    (22) return -> . RETURN expression
    (23) return -> . RETURN
    (21) for_loop -> . FOR ID = expression : expression instruction
    (18) while_loop -> . WHILE ( expression ) instruction
    (19) while_loop -> . WHILE ( expression ) { instruction }
    (20) while_loop -> . WHILE ( expression ) { instructions }
    (35) assignment -> . var = expression
    (36) assignment -> . var ADDASSIGN expression
    (37) assignment -> . var SUBASSIGN expression
    (38) assignment -> . var MULASSIGN expression
    (39) assignment -> . var DIVASSIGN expression
    (24) print -> . PRINT ( list_for_print ) ;
    (25) print -> . PRINT list_for_print ;
    (33) var -> . ID
    (34) var -> . ID [ expression , expression ]

    {               shift and go to state 5
    BREAK           shift and go to state 8
    CONTINUE        shift and go to state 9
    IF              shift and go to state 14
    RETURN          shift and go to state 15
    FOR             shift and go to state 16
    WHILE           shift and go to state 18
    PRINT           shift and go to state 20
    ID              shift and go to state 17

    instruction                    shift and go to state 22
    if                             shift and go to state 6
    return                         shift and go to state 7
    for_loop                       shift and go to state 10
    while_loop                     shift and go to state 11
    assignment                     shift and go to state 12
    print                          shift and go to state 13
    var                            shift and go to state 19

state 6

    (7) instruction -> if .

    {               reduce using rule 7 (instruction -> if .)
    BREAK           reduce using rule 7 (instruction -> if .)
    CONTINUE        reduce using rule 7 (instruction -> if .)
    IF              reduce using rule 7 (instruction -> if .)
    RETURN          reduce using rule 7 (instruction -> if .)
    FOR             reduce using rule 7 (instruction -> if .)
    WHILE           reduce using rule 7 (instruction -> if .)
    PRINT           reduce using rule 7 (instruction -> if .)
    ID              reduce using rule 7 (instruction -> if .)
    $end            reduce using rule 7 (instruction -> if .)
    }               reduce using rule 7 (instruction -> if .)
    ELSE            reduce using rule 7 (instruction -> if .)


state 7

    (8) instruction -> return . ;

    ;               shift and go to state 23


state 8

    (9) instruction -> BREAK . ;

    ;               shift and go to state 24


state 9

    (10) instruction -> CONTINUE . ;

    ;               shift and go to state 25


state 10

    (11) instruction -> for_loop .

    {               reduce using rule 11 (instruction -> for_loop .)
    BREAK           reduce using rule 11 (instruction -> for_loop .)
    CONTINUE        reduce using rule 11 (instruction -> for_loop .)
    IF              reduce using rule 11 (instruction -> for_loop .)
    RETURN          reduce using rule 11 (instruction -> for_loop .)
    FOR             reduce using rule 11 (instruction -> for_loop .)
    WHILE           reduce using rule 11 (instruction -> for_loop .)
    PRINT           reduce using rule 11 (instruction -> for_loop .)
    ID              reduce using rule 11 (instruction -> for_loop .)
    $end            reduce using rule 11 (instruction -> for_loop .)
    }               reduce using rule 11 (instruction -> for_loop .)
    ELSE            reduce using rule 11 (instruction -> for_loop .)


state 11

    (12) instruction -> while_loop .

    {               reduce using rule 12 (instruction -> while_loop .)
    BREAK           reduce using rule 12 (instruction -> while_loop .)
    CONTINUE        reduce using rule 12 (instruction -> while_loop .)
    IF              reduce using rule 12 (instruction -> while_loop .)
    RETURN          reduce using rule 12 (instruction -> while_loop .)
    FOR             reduce using rule 12 (instruction -> while_loop .)
    WHILE           reduce using rule 12 (instruction -> while_loop .)
    PRINT           reduce using rule 12 (instruction -> while_loop .)
    ID              reduce using rule 12 (instruction -> while_loop .)
    $end            reduce using rule 12 (instruction -> while_loop .)
    }               reduce using rule 12 (instruction -> while_loop .)
    ELSE            reduce using rule 12 (instruction -> while_loop .)


state 12

    (13) instruction -> assignment . ;

    ;               shift and go to state 26


state 13

    (14) instruction -> print .

    {               reduce using rule 14 (instruction -> print .)
    BREAK           reduce using rule 14 (instruction -> print .)
    CONTINUE        reduce using rule 14 (instruction -> print .)
    IF              reduce using rule 14 (instruction -> print .)
    RETURN          reduce using rule 14 (instruction -> print .)
    FOR             reduce using rule 14 (instruction -> print .)
    WHILE           reduce using rule 14 (instruction -> print .)
    PRINT           reduce using rule 14 (instruction -> print .)
    ID              reduce using rule 14 (instruction -> print .)
    $end            reduce using rule 14 (instruction -> print .)
    }               reduce using rule 14 (instruction -> print .)
    ELSE            reduce using rule 14 (instruction -> print .)


state 14

    (15) if -> IF . ( expression ) instruction ELSE instruction
    (16) if -> IF . ( expression ) instruction
    (17) if -> IF . ( expression ) instruction ELSE if

    (               shift and go to state 27


state 15

    (22) return -> RETURN . expression
    (23) return -> RETURN .
    (28) expression -> . var
    (29) expression -> . ( expression )
    (30) expression -> . INTNUM
    (31) expression -> . FLOATNUM
    (32) expression -> . STRING
    (40) expression -> . expression '
    (41) expression -> . - expression
    (42) expression -> . expression + expression
    (43) expression -> . expression - expression
    (44) expression -> . expression * expression
    (45) expression -> . expression / expression
    (46) expression -> . expression DOTADD expression
    (47) expression -> . expression DOTSUB expression
    (48) expression -> . expression DOTMUL expression
    (49) expression -> . expression DOTDIV expression
    (50) expression -> . expression < expression
    (51) expression -> . expression > expression
    (52) expression -> . expression LESSEQ expression
    (53) expression -> . expression MOREEQ expression
    (54) expression -> . expression EQUAL expression
    (55) expression -> . expression NOTEQUAL expression
    (56) expression -> . matrix
    (62) expression -> . matrix_creation ( expression )
    (33) var -> . ID
    (34) var -> . ID [ expression , expression ]
    (57) matrix -> . [ matrix ]
    (58) matrix -> . [ sub_string_1 ]
    (59) matrix -> . [ sub_string_1 , matrix ]
    (63) matrix_creation -> . ZEROS
    (64) matrix_creation -> . ONES
    (65) matrix_creation -> . EYE

    ;               reduce using rule 23 (return -> RETURN .)
    (               shift and go to state 30
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    STRING          shift and go to state 33
    -               shift and go to state 34
    ID              shift and go to state 17
    [               shift and go to state 37
    ZEROS           shift and go to state 38
    ONES            shift and go to state 39
    EYE             shift and go to state 40

    expression                     shift and go to state 28
    var                            shift and go to state 29
    matrix                         shift and go to state 35
    matrix_creation                shift and go to state 36

state 16

    (21) for_loop -> FOR . ID = expression : expression instruction

    ID              shift and go to state 41


state 17

    (33) var -> ID .
    (34) var -> ID . [ expression , expression ]

    =               reduce using rule 33 (var -> ID .)
    ADDASSIGN       reduce using rule 33 (var -> ID .)
    SUBASSIGN       reduce using rule 33 (var -> ID .)
    MULASSIGN       reduce using rule 33 (var -> ID .)
    DIVASSIGN       reduce using rule 33 (var -> ID .)
    '               reduce using rule 33 (var -> ID .)
    +               reduce using rule 33 (var -> ID .)
    -               reduce using rule 33 (var -> ID .)
    *               reduce using rule 33 (var -> ID .)
    /               reduce using rule 33 (var -> ID .)
    DOTADD          reduce using rule 33 (var -> ID .)
    DOTSUB          reduce using rule 33 (var -> ID .)
    DOTMUL          reduce using rule 33 (var -> ID .)
    DOTDIV          reduce using rule 33 (var -> ID .)
    <               reduce using rule 33 (var -> ID .)
    >               reduce using rule 33 (var -> ID .)
    LESSEQ          reduce using rule 33 (var -> ID .)
    MOREEQ          reduce using rule 33 (var -> ID .)
    EQUAL           reduce using rule 33 (var -> ID .)
    NOTEQUAL        reduce using rule 33 (var -> ID .)
    ;               reduce using rule 33 (var -> ID .)
    ,               reduce using rule 33 (var -> ID .)
    )               reduce using rule 33 (var -> ID .)
    ]               reduce using rule 33 (var -> ID .)
    :               reduce using rule 33 (var -> ID .)
    {               reduce using rule 33 (var -> ID .)
    BREAK           reduce using rule 33 (var -> ID .)
    CONTINUE        reduce using rule 33 (var -> ID .)
    IF              reduce using rule 33 (var -> ID .)
    RETURN          reduce using rule 33 (var -> ID .)
    FOR             reduce using rule 33 (var -> ID .)
    WHILE           reduce using rule 33 (var -> ID .)
    PRINT           reduce using rule 33 (var -> ID .)
    ID              reduce using rule 33 (var -> ID .)
    [               shift and go to state 42


state 18

    (18) while_loop -> WHILE . ( expression ) instruction
    (19) while_loop -> WHILE . ( expression ) { instruction }
    (20) while_loop -> WHILE . ( expression ) { instructions }

    (               shift and go to state 43


state 19

    (35) assignment -> var . = expression
    (36) assignment -> var . ADDASSIGN expression
    (37) assignment -> var . SUBASSIGN expression
    (38) assignment -> var . MULASSIGN expression
    (39) assignment -> var . DIVASSIGN expression

    =               shift and go to state 44
    ADDASSIGN       shift and go to state 45
    SUBASSIGN       shift and go to state 46
    MULASSIGN       shift and go to state 47
    DIVASSIGN       shift and go to state 48


state 20

    (24) print -> PRINT . ( list_for_print ) ;
    (25) print -> PRINT . list_for_print ;
    (26) list_for_print -> . expression , list_for_print
    (27) list_for_print -> . expression
    (28) expression -> . var
    (29) expression -> . ( expression )
    (30) expression -> . INTNUM
    (31) expression -> . FLOATNUM
    (32) expression -> . STRING
    (40) expression -> . expression '
    (41) expression -> . - expression
    (42) expression -> . expression + expression
    (43) expression -> . expression - expression
    (44) expression -> . expression * expression
    (45) expression -> . expression / expression
    (46) expression -> . expression DOTADD expression
    (47) expression -> . expression DOTSUB expression
    (48) expression -> . expression DOTMUL expression
    (49) expression -> . expression DOTDIV expression
    (50) expression -> . expression < expression
    (51) expression -> . expression > expression
    (52) expression -> . expression LESSEQ expression
    (53) expression -> . expression MOREEQ expression
    (54) expression -> . expression EQUAL expression
    (55) expression -> . expression NOTEQUAL expression
    (56) expression -> . matrix
    (62) expression -> . matrix_creation ( expression )
    (33) var -> . ID
    (34) var -> . ID [ expression , expression ]
    (57) matrix -> . [ matrix ]
    (58) matrix -> . [ sub_string_1 ]
    (59) matrix -> . [ sub_string_1 , matrix ]
    (63) matrix_creation -> . ZEROS
    (64) matrix_creation -> . ONES
    (65) matrix_creation -> . EYE

    (               shift and go to state 49
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    STRING          shift and go to state 33
    -               shift and go to state 34
    ID              shift and go to state 17
    [               shift and go to state 37
    ZEROS           shift and go to state 38
    ONES            shift and go to state 39
    EYE             shift and go to state 40

    list_for_print                 shift and go to state 50
    expression                     shift and go to state 51
    var                            shift and go to state 29
    matrix                         shift and go to state 35
    matrix_creation                shift and go to state 36

state 21

    (4) instructions -> instructions instruction .

    {               reduce using rule 4 (instructions -> instructions instruction .)
    BREAK           reduce using rule 4 (instructions -> instructions instruction .)
    CONTINUE        reduce using rule 4 (instructions -> instructions instruction .)
    IF              reduce using rule 4 (instructions -> instructions instruction .)
    RETURN          reduce using rule 4 (instructions -> instructions instruction .)
    FOR             reduce using rule 4 (instructions -> instructions instruction .)
    WHILE           reduce using rule 4 (instructions -> instructions instruction .)
    PRINT           reduce using rule 4 (instructions -> instructions instruction .)
    ID              reduce using rule 4 (instructions -> instructions instruction .)
    $end            reduce using rule 4 (instructions -> instructions instruction .)
    }               reduce using rule 4 (instructions -> instructions instruction .)


state 22

    (6) instruction -> { instruction . }

    }               shift and go to state 52


state 23

    (8) instruction -> return ; .

    {               reduce using rule 8 (instruction -> return ; .)
    BREAK           reduce using rule 8 (instruction -> return ; .)
    CONTINUE        reduce using rule 8 (instruction -> return ; .)
    IF              reduce using rule 8 (instruction -> return ; .)
    RETURN          reduce using rule 8 (instruction -> return ; .)
    FOR             reduce using rule 8 (instruction -> return ; .)
    WHILE           reduce using rule 8 (instruction -> return ; .)
    PRINT           reduce using rule 8 (instruction -> return ; .)
    ID              reduce using rule 8 (instruction -> return ; .)
    $end            reduce using rule 8 (instruction -> return ; .)
    }               reduce using rule 8 (instruction -> return ; .)
    ELSE            reduce using rule 8 (instruction -> return ; .)


state 24

    (9) instruction -> BREAK ; .

    {               reduce using rule 9 (instruction -> BREAK ; .)
    BREAK           reduce using rule 9 (instruction -> BREAK ; .)
    CONTINUE        reduce using rule 9 (instruction -> BREAK ; .)
    IF              reduce using rule 9 (instruction -> BREAK ; .)
    RETURN          reduce using rule 9 (instruction -> BREAK ; .)
    FOR             reduce using rule 9 (instruction -> BREAK ; .)
    WHILE           reduce using rule 9 (instruction -> BREAK ; .)
    PRINT           reduce using rule 9 (instruction -> BREAK ; .)
    ID              reduce using rule 9 (instruction -> BREAK ; .)
    $end            reduce using rule 9 (instruction -> BREAK ; .)
    }               reduce using rule 9 (instruction -> BREAK ; .)
    ELSE            reduce using rule 9 (instruction -> BREAK ; .)


state 25

    (10) instruction -> CONTINUE ; .

    {               reduce using rule 10 (instruction -> CONTINUE ; .)
    BREAK           reduce using rule 10 (instruction -> CONTINUE ; .)
    CONTINUE        reduce using rule 10 (instruction -> CONTINUE ; .)
    IF              reduce using rule 10 (instruction -> CONTINUE ; .)
    RETURN          reduce using rule 10 (instruction -> CONTINUE ; .)
    FOR             reduce using rule 10 (instruction -> CONTINUE ; .)
    WHILE           reduce using rule 10 (instruction -> CONTINUE ; .)
    PRINT           reduce using rule 10 (instruction -> CONTINUE ; .)
    ID              reduce using rule 10 (instruction -> CONTINUE ; .)
    $end            reduce using rule 10 (instruction -> CONTINUE ; .)
    }               reduce using rule 10 (instruction -> CONTINUE ; .)
    ELSE            reduce using rule 10 (instruction -> CONTINUE ; .)


state 26

    (13) instruction -> assignment ; .

    {               reduce using rule 13 (instruction -> assignment ; .)
    BREAK           reduce using rule 13 (instruction -> assignment ; .)
    CONTINUE        reduce using rule 13 (instruction -> assignment ; .)
    IF              reduce using rule 13 (instruction -> assignment ; .)
    RETURN          reduce using rule 13 (instruction -> assignment ; .)
    FOR             reduce using rule 13 (instruction -> assignment ; .)
    WHILE           reduce using rule 13 (instruction -> assignment ; .)
    PRINT           reduce using rule 13 (instruction -> assignment ; .)
    ID              reduce using rule 13 (instruction -> assignment ; .)
    $end            reduce using rule 13 (instruction -> assignment ; .)
    }               reduce using rule 13 (instruction -> assignment ; .)
    ELSE            reduce using rule 13 (instruction -> assignment ; .)


state 27

    (15) if -> IF ( . expression ) instruction ELSE instruction
    (16) if -> IF ( . expression ) instruction
    (17) if -> IF ( . expression ) instruction ELSE if
    (28) expression -> . var
    (29) expression -> . ( expression )
    (30) expression -> . INTNUM
    (31) expression -> . FLOATNUM
    (32) expression -> . STRING
    (40) expression -> . expression '
    (41) expression -> . - expression
    (42) expression -> . expression + expression
    (43) expression -> . expression - expression
    (44) expression -> . expression * expression
    (45) expression -> . expression / expression
    (46) expression -> . expression DOTADD expression
    (47) expression -> . expression DOTSUB expression
    (48) expression -> . expression DOTMUL expression
    (49) expression -> . expression DOTDIV expression
    (50) expression -> . expression < expression
    (51) expression -> . expression > expression
    (52) expression -> . expression LESSEQ expression
    (53) expression -> . expression MOREEQ expression
    (54) expression -> . expression EQUAL expression
    (55) expression -> . expression NOTEQUAL expression
    (56) expression -> . matrix
    (62) expression -> . matrix_creation ( expression )
    (33) var -> . ID
    (34) var -> . ID [ expression , expression ]
    (57) matrix -> . [ matrix ]
    (58) matrix -> . [ sub_string_1 ]
    (59) matrix -> . [ sub_string_1 , matrix ]
    (63) matrix_creation -> . ZEROS
    (64) matrix_creation -> . ONES
    (65) matrix_creation -> . EYE

    (               shift and go to state 30
    INTNUM          shift and go to state 31
    FLOATNUM        shift and go to state 32
    STRING          shift and go to state 33
    -               shift and go to state 34
    ID              shift and go to state 17
    [               shift and go to state 37
    ZEROS           shift and go to state 38
    ONES            shift and go to state 39
    EYE             shift and go to state 40

    expression                     shift and go to state 53
    var                            shift and go to state 29
    matrix                         shift and go to state 35
    matrix_creation                shift and go to state 36

state 28

    (22) return -> RETURN expression .
    (40) expression -> expression . '
    (42) expression -> expression . + expression
    (43) expression -> expression . - expression
    (44) expression -> expression . * expression
    (45) expression -> expression . / expression
    (46) expression -> expression . DOTADD expression
    (47) expression -> expression . DOTSUB expression
    (48) expression -> expression . DOTMUL expression
    (49) expression -> expression . DOTDIV expression
    (50) expression -> expression . < expression
    (51) expression -> expression . > expression
    (52) expression -> expression . LESSEQ expression
    (53) expression -> expression . MOREEQ expression
    (54) expression -> expression . EQUAL expression
    (55) expression -> expression . NOTEQUAL expression

    ;               reduce using rule 22 (return -> RETURN expression .)
    '               shift and go to state 54
    +               shift and go to state 55
    -               shift and go to state 56
    *               shift and go to state 57
    /               shift and go to state 58
    DOTADD          shift and go to state 59
    DOTSUB          shift and go to state 60
    DOTMUL          shift and go to state 61
    DOTDIV          shift and go to state 62
    <               shift and go to state 63
    >               shift and go to state 64
    LESSEQ          shift and go to state 65
    MOREEQ          shift and go to state 66
    EQUAL           shift and go to state 67
    NOTEQUAL        shift and go to state 68


state 29

    (28) expression -> var .
